--- a/labs/L2LS/sites/site_1/group_vars/SITE1_FABRIC_PORTS.yml
+++ b/labs/L2LS/sites/site_1/group_vars/SITE1_FABRIC_PORTS.yml
@@ -9,7 +9,17 @@ port_profiles:
     mode: "access"
     vlans: "20"
     spanning_tree_portfast: edge
+
+###########################################################
+# ---------------- Endpoint Connectivity ---------------- #
+###########################################################
+
 servers:
+
+# # --------------------------------------------------------#
+# # Site1 RACK1 Endpoints
+# # --------------------------------------------------------#
+
    - name: s1-host1                                      # Server name
      rack: RACK1                                         # Informational RACK (optional)
      adapters:
@@ -20,6 +30,9 @@ servers:
          port_channel:
            mode: active
 
+# # --------------------------------------------------------#
+# # Site1 RACK2 Endpoints
+# # --------------------------------------------------------#
 
    - name: s1-host2                                      # Server name
      rack: RACK2                                         # Informational RACK (optional)
